# framework-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: build-test.yml  install.yml  macos.yml  standalone.yml  style.yml  windows.yml
KM3/: CMakeLists.txt  main.cpp
all/: CMakeLists.txt
documentation/: CMakeLists.txt
include/: CMakeLists.txt
include/helpers/: CMakeLists.txt  FWD.hpp  asyncForwarder.hpp  crtp.hpp  functionTraits.hpp  futureIsReady.hpp  isStlContainer.hpp  threadList.hpp  time.hpp  timer.hpp
include/helpers/Logger/: CMakeLists.txt  emptyLogger.hpp  logMessage.hpp  logger.hpp  loggerImpl.hpp  messageLogger.hpp  terminalColorCodes.hpp  time.hpp
include/ifca/: CMakeLists.txt  drain.hpp  exceptions.hpp  ifca.h  ifca.hpp  ifcaMethods.hpp  ifcaState.hpp  isIfcaInterface.hpp  maxParallel.hpp  operation.h  transformChain.hpp  types.hpp
include/ifca/transform/: CMakeLists.txt  delegate.hpp  each.hpp  filter.hpp  from.hpp  into.hpp  isTransformExpression.hpp  map.hpp  orderedExpression.hpp  outStream.hpp  race.hpp  reduce.hpp  run.hpp  transform.hpp  transformBase.hpp  transformChain.hpp  transformExpression.hpp
include/streams/: CMakeLists.txt  dataStream.hpp
scribbles/: a.out  lambda.cpp  promises.cpp
source/: drain.cpp  ifca.cpp
source/helpers/: loggerImpl.cpp
source/ifca/: drain.cpp  ifca.cpp  ifcaState.cpp
source/transform/: transform.cpp  transformBase.cpp
src/: CMakeLists.txt
src/helpers/: loggerImpl.cpp
src/ifca/: drain.cpp
standalone/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: ifca.cpp  ifca.test.cpp  testClass.hpp
test/source/ifca/: drain.test.cpp  ifca.test.cpp
test/source/ifca/transform/: each.test.cpp  filter.test.cpp  race.test.cpp  reduce.test.cpp  run.test.cpp  transform.test.cpp
test/source/milestones/: km1_1.test.cpp
test/source/scenarios/: ifca.test.cpp  testData.hpp
test/source/streams/: dataStream.test.cpp  dataStreamImp.test.cpp
test/source/transform/: each.test.cpp  map.test.cpp  transform.test.cpp
tests/: CMakeLists.txt  testClass.hpp
tests/ifca/: CMakeLists.txt  drain.test.cpp  ifca.test.cpp
tests/ifca/transform/: CMakeLists.txt  delegate.test.cpp  each.test.cpp  filter.test.cpp  from.test.cpp  into.test.cpp
tests/scenarios/: CMakeLists.txt  ifca.test.cpp  testData.hpp
tests/streams/: CMakeLists.txt  dataStream.test.cpp
